Remove unused 'WindowUtil', use client canvas for game window size, improve plugin properties (descriptions), remove unused code

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Aeimo
-author=Aeimo X
+displayName=Movement-based AFK Alerter
+author=Aeimo
 support=
-description=Gives a visual indicator when your character stops moving
+description=A configurable, visual indicator for when your character stops moving
 tags=afk,runecrafting,rc,agil,agility,alert,alerter
 plugins=com.aeimo.afkmovealert.AfkAlertPlugin
